docs: organize each document

--- a/package/sleep/package.json
+++ b/package/sleep/package.json
@@ -27,8 +27,7 @@
     "src",
     "dist",
     "package.json",
-    "../../tsconfig.json",
-    "../../LICENSE"
+    "LICENSE"
   ],
   "exports": {
     ".": {
