--- a/package/error/package.json
+++ b/package/error/package.json
@@ -28,8 +28,7 @@
     "src",
     "dist",
     "package.json",
-    "../../tsconfig.json",
-    "../../LICENSE"
+    "LICENSE"
   ],
   "sideEffects": false,
   "exports": {
