--- a/package/result/package.json
+++ b/package/result/package.json
@@ -31,8 +31,7 @@
     "src",
     "dist",
     "package.json",
-    "../../tsconfig.json",
-    "../../LICENSE"
+    "LICENSE"
   ],
   "exports": {
     ".": {
