--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,11 +1,12 @@
 {
   "recommendations": [
+    "oven.bun-vscode",
     "editorconfig.editorconfig",
+    "biomejs.biome",
+    "esbenp.prettier-vscode",
     "unifiedjs.vscode-mdx",
     "davidanson.vscode-markdownlint",
     "takumii.markdowntable",
-    "biomejs.biome",
-    "redhat.vscode-yaml",
-    "esbenp.prettier-vscode"
+    "redhat.vscode-yaml"
   ]
 }
