--- a/package/remark-link-card/package.json
+++ b/package/remark-link-card/package.json
@@ -1,17 +1,7 @@
 {
   "name": "@totto2727/remark-link-card",
-  "version": "1.3.1",
+  "author": "totto2727",
   "description": "Remark plugin to convert text links to link cards inspired by gatsby-remark-link-card",
-  "main": "index.js",
-  "scripts": {
-  },
-  "publishConfig": {
-    "access": "public",
-    "registry": "https://registry.npmjs.org/"
-  },
-  "engines": {
-    "node": ">=12"
-  },
   "keywords": [
     "unified",
     "remark",
@@ -20,27 +10,47 @@
     "link",
     "card"
   ],
-  "author": "totto2727",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/gladevise/remark-link-card/issues"
+  "version": "1.3.1",
+  "publishConfig": {
+    "access": "public",
+    "registry": "https://registry.npmjs.org/"
   },
-  "homepage": "https://github.com/gladevise/remark-link-card#readme",
+  "files": ["src", "dist", "package.json", "LICENSE"],
+  "exports": {
+    ".": {
+      "import": {
+        "types": "./dist/import/index.d.mts",
+        "default": "./dist/import/index.mjs"
+      },
+      "require": {
+        "types": "./dist/require/index.d.cts",
+        "default": "./dist/require/index.cjs"
+      }
+    }
+  },
+  "scripts": {
+    "build": "run-z build:transpile,build:esm,build:cjs",
+    "build:transpile": "bun build/build.mts",
+    "build:esm": "tsc --project build/tsconfig.build.esm.json",
+    "build:cjs": "tsc --project build/tsconfig.build.cjs.json",
+    "prepublish": "attw --pack . || exit 0"
+  },
+  "dependencies": {
+    "he": "^1.2.0",
+    "open-graph-scraper": "git@github.com:totto2727-org/openGraphScraper.git",
+    "remeda": "^1.46.0",
+    "sanitize-filename": "^1.6.3",
+    "unist-util-visit": "^2.0.3"
+  },
   "devDependencies": {
     "@remark-embedder/core": "^1.2.4",
-    "jest": "^26.6.3",
+    "@types/he": "^1.2.3",
     "next-mdx-remote": "^2.1.4",
     "node-html-parser": "^3.1.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "remark": "^13.0.0",
     "remark-html": "^13.0.1"
-  },
-  "dependencies": {
-    "he": "^1.2.0",
-    "node-fetch": "^2.6.1",
-    "open-graph-scraper": "^4.8.1",
-    "sanitize-filename": "^1.6.3",
-    "unist-util-visit": "^2.0.3"
   }
 }
