--- a/package/result/package.json
+++ b/package/result/package.json
@@ -25,14 +25,15 @@
     "build:transpile": "bun build/build.mts",
     "build:esm": "tsc --project build/tsconfig.build.esm.json",
     "build:cjs": "tsc --project build/tsconfig.build.cjs.json",
+    "check": "run-z check:biome,check:tsc",
+    "check:biome": "biome check .",
+    "check:tsc": "tsc --noEmit",
+    "fix": "run-z fix:biome",
+    "fix:biome": "biome check --apply-unsafe .",
+    "test": "bun test",
     "prepublish": "attw --pack . || exit 0"
   },
-  "files": [
-    "src",
-    "dist",
-    "package.json",
-    "LICENSE"
-  ],
+  "files": ["src", "dist", "package.json", "tsconfig.json", "LICENSE"],
   "exports": {
     ".": {
       "import": {
