--- a/lefthook.yml
+++ b/lefthook.yml
@@ -1,7 +1,9 @@
 pre-commit:
   parallel: true
   commands:
-    static-check:
+    root:
+      run: bun root:check
+    check:
       run: bun run check
 
 pre-push:
