--- a/deno.json
+++ b/deno.json
@@ -17,7 +17,9 @@
     "check": "deno task check:deno:lint && deno task check:deno:fmt && deno task check:deno:check",
     "check:deno:lint": "deno lint",
     "check:deno:fmt": "deno fmt --check",
-    "check:deno:check": "deno check **/*.ts"
+    "check:deno:check": "deno check **/*.ts",
+    "update:check": "deno run --allow-env --allow-read --allow-write=. --allow-run=git,deno --allow-net=registry.npmjs.org,jsr.io https://deno.land/x/molt/cli.ts ./**/*.ts",
+    "update:write": "deno task update:check --write"
   },
   "fmt": {
     "semiColons": false
