chore: exclude CHANGELOG.md in deno.json

--- a/deno.json
+++ b/deno.json
@@ -25,7 +25,8 @@
     "changelog": "git cliff -o CHANGELOG.md"
   },
   "fmt": {
-    "semiColons": false
+    "semiColons": false,
+    "exclude": ["CHANGELOG.md"]
   },
   "imports": {
     "@/": "./"
