--- a/deno.json
+++ b/deno.json
@@ -1,6 +1,6 @@
 {
   "name": "@totto/lib",
-  "version": "0.1.2",
+  "version": "0.2.0",
   "lock": false,
   "exports": {
     "./error": "./error/index.ts",
@@ -26,7 +26,9 @@
   },
   "fmt": {
     "semiColons": false,
-    "exclude": ["CHANGELOG.md"]
+    "exclude": [
+      "CHANGELOG.md"
+    ]
   },
   "imports": {
     "@/": "./"
